fix #755 in some cases z-index calculation produces negative values

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui-style.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui-style.css
@@ -2653,7 +2653,6 @@ a {
     top: 70px;
     margin-right: 0px;
     background: #fdfdfd;
-    z-index: 11 !important;
     -webkit-box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);
     -ms-box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.1);
